--- a/imagepicker-support/src/main/res/values/strings.xml
+++ b/imagepicker-support/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="error_failed_pick_gallery_image">Failed to pick Gallery image</string>
     <string name="error_failed_to_crop_image">Failed to crop image</string>
     <string name="error_failed_to_compress_image">Failed to compress image</string>
+    <string name="error_task_cancelled">Task Cancelled</string>
 
 
 </resources>
