--- a/imagepicker/src/main/res/values/strings.xml
+++ b/imagepicker/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Image Picker</string>
+    <string name="app_name" translatable="false">Image Picker</string>
 
     <string name="title_choose_image_provider">Choose</string>
     <string name="action_cancel">Cancel</string>
@@ -23,5 +23,13 @@
     <string name="error_failed_to_compress_image">Failed to compress image</string>
     <string name="error_task_cancelled">Task Cancelled</string>
 
+    <string name="ucrop_label_original">Original</string>
+    <string name="ucrop_label_edit_photo">Edytuj zdjęcie</string>
 
+    <string name="ucrop_menu_crop">Przytnij</string>
+    <string name="ucrop_error_input_data_is_absent" translatable="false">URI wejścia i wyjścia musi być ustalone</string>
+    <string name="ucrop_mutate_exception_hint" translatable="false">Możesz nadpisać kolor w color resources (ucrop_color_toolbar_widget) w swojej aplikacji aby wspierać urządzenia przed Androidem L</string>
+    <string name="ucrop_rotate">Obróć</string>
+    <string name="ucrop_scale">Skaluj</string>
+    <string name="ucrop_crop">Przytnij</string>
 </resources>
