--- a/imagepicker/src/main/res/values/strings.xml
+++ b/imagepicker/src/main/res/values/strings.xml
@@ -22,6 +22,6 @@
     <string name="error_failed_to_crop_image">Failed to crop image</string>
     <string name="error_failed_to_compress_image">Failed to compress image</string>
     <string name="error_task_cancelled">Task Cancelled</string>
-
+    <string name="error_camera_app_not_found">Camera app not found</string>
 
 </resources>
