Fixed string resources
Added resource tag and missing uCrop texts

--- a/imagepicker/src/main/res/values-fa/strings.xml
+++ b/imagepicker/src/main/res/values-fa/strings.xml
@@ -1,11 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
     <string name="app_name">انتخاب عکس</string>
 
+    <!-- ImagePicker string resource start -->
     <string name="title_choose_image_provider">انتخاب</string>
     <string name="action_cancel">بیخیال</string>
     <string name="title_gallery">گالری</string>
     <string name="title_camera">دوربین</string>
-
-    <string name="image_picker_provider_authority_suffix">.imagepicker.provider</string>
 
     <string name="message_gallery_permission_denied">برای انتخاب عکس دسترسی خواندن فضای خارجی لازم است. لطفا دسترسی درخواست شده را از تنظیمات فعال کنید > دسترسی ها</string>
     <string name="message_camera_permission_denied">برای گرفتن عکس دسترسی دوربین و فضای خارجی لازم است. غیرمجاز کردن این پرمیشن ها اجازه کارکرد صحیح برنامه را میگیرد. لطفا تمامی دسترسی های درخواست شده را از تنظیمات فعال کنید > دسترسی ها</string>
@@ -21,3 +22,15 @@
     <string name="error_failed_to_crop_image">خطا در برش عکس</string>
     <string name="error_failed_to_compress_image">خطا در فشرده سازی عکس</string>
     <string name="error_task_cancelled">عمل لغو شد</string>
+    <string name="error_camera_app_not_found">برنامه دوربین پیدا نشد</string>
+    <!-- ImagePicker string resource end -->
+
+    <!-- uCrop string resource start -->
+    <string name="ucrop_label_original">اصلی</string>
+    <string name="ucrop_label_edit_photo">ویرایش عکس</string>
+    <string name="ucrop_menu_crop">برش</string>
+    <string name="ucrop_rotate">چرخش</string>
+    <string name="ucrop_scale">مقیاس</string>
+    <string name="ucrop_crop">برش</string>
+    <!-- uCrop string resource end -->
+</resources>
