Added new Android Activity Result API
- Added two functions to be called with the new Result API
- Gradle wrapper update
- Gradle Dependencies update

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     
     <string name="action_camera_only">Camera Only</string>
     <string name="action_gallery_only">Gallery Only</string>
+    <string name="action_all">All with new API</string>
 </resources>
