--- a/imagepicker/src/main/res/values-fa/strings.xml
+++ b/imagepicker/src/main/res/values-fa/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <!-- ImagePicker string resource start -->
     <string name="title_choose_image_provider">انتخاب</string>
-    <string name="action_cancel">بیخیال</string>
+    <string name="action_cancel">لغو</string>
     <string name="title_gallery">گالری</string>
     <string name="title_camera">دوربین</string>
 
@@ -17,7 +17,7 @@
     <string name="error_failed_pick_gallery_image">خطا در انتخاب عکس از گالری</string>
     <string name="error_failed_to_crop_image">خطا در برش عکس</string>
     <string name="error_failed_to_compress_image">خطا در فشرده سازی عکس</string>
-    <string name="error_task_cancelled">عمل لغو شد</string>
+    <string name="error_task_cancelled">عملیات لغو شد</string>
     <string name="error_camera_app_not_found">برنامه دوربین پیدا نشد</string>
     <!-- ImagePicker string resource end -->
 
