--- a/imagepicker/src/main/res/values-in/strings.xml
+++ b/imagepicker/src/main/res/values-in/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+
+    <!-- ImagePicker string resource start -->
     <string name="title_choose_image_provider">Pilih</string>
     <string name="action_cancel">Batal</string>
     <string name="title_gallery">Galeri</string>
@@ -13,6 +15,7 @@
     <string name="error_failed_to_compress_image">Gambar gagal dikompres</string>
     <string name="error_task_cancelled">Task dibatalkan</string>
     <string name="error_camera_app_not_found">Kamera tidak ditemukan</string>
+    <!-- ImagePicker string resource end -->
 
     <!-- uCrop string resource start -->
     <string name="ucrop_label_original">Asli</string>
