--- a/imagepicker/src/main/res/values-de/strings.xml
+++ b/imagepicker/src/main/res/values-de/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+
+    <!-- ImagePicker string resource start -->
     <string name="title_choose_image_provider">Auswählen</string>
     <string name="action_cancel">Abbrechen</string>
     <string name="title_gallery">Galerie</string>
@@ -13,6 +15,7 @@
     <string name="error_failed_to_compress_image">Foto konnte nicht komprimiert werden</string>
     <string name="error_task_cancelled">Vorgang abgebrochen</string>
     <string name="error_camera_app_not_found">Es wurde keine Kamera-App gefunden</string>
+    <!-- ImagePicker string resource end -->
 
     <!-- uCrop string resource start -->
     <string name="ucrop_label_original">Original</string>
