Removed app_name
#236

--- a/imagepicker/src/main/res/values/strings.xml
+++ b/imagepicker/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name" translatable="false">Image Picker</string>
     <string name="image_picker_provider_authority_suffix" translatable="false">.imagepicker.provider</string>
 
+    <!-- ImagePicker string resource start -->
     <string name="title_choose_image_provider">Choose</string>
     <string name="action_cancel">Cancel</string>
     <string name="title_gallery">Gallery</string>
@@ -16,6 +16,7 @@
     <string name="error_failed_to_compress_image">Failed to compress image</string>
     <string name="error_task_cancelled">Task Cancelled</string>
     <string name="error_camera_app_not_found">Camera app not found</string>
+    <!-- ImagePicker string resource end -->
 
     <!-- uCrop string resource start -->
     <string name="ucrop_label_original">Original</string>
