--- a/imagepicker/src/main/res/values-in/strings.xml
+++ b/imagepicker/src/main/res/values-in/strings.xml
@@ -7,10 +7,10 @@
     <string name="permission_camera_denied">
         <![CDATA[Untuk mengambil gambar dibutuhkan akses perizinan penyimpanan. Mohon berikan perizinan tersebut melalui Pengaturan > Perizinan.]]></string>
 
-    <string name="error_failed_to_create_camera_image_file">Membuat file gambar dari kamera gagal</string>
-    <string name="error_failed_pick_gallery_image">Pemilihan gambar dari galeri gagal</string>
-    <string name="error_failed_to_crop_image">Gambar gagal dipotong</string>
-    <string name="error_failed_to_compress_image">Gambar gagal dikompres</string>
+    <string name="error_failed_to_create_camera_image_file">Gagal membuat file gambar dari kamera</string>
+    <string name="error_failed_pick_gallery_image">Gagal memilih gambar dari galeri</string>
+    <string name="error_failed_to_crop_image">Gagal memotong gambar</string>
+    <string name="error_failed_to_compress_image">Gagal mengompres gambar</string>
     <string name="error_task_cancelled">Task dibatalkan</string>
     <string name="error_camera_app_not_found">Kamera tidak ditemukan</string>
 
@@ -18,7 +18,7 @@
     <string name="ucrop_label_original">Asli</string>
     <string name="ucrop_label_edit_photo">Edit foto</string>
     <string name="ucrop_menu_crop">Potong</string>
-    <string name="ucrop_rotate">Memutar</string>
+    <string name="ucrop_rotate">Putar</string>
     <string name="ucrop_scale">Skala</string>
     <string name="ucrop_crop">Potong</string>
     <!-- uCrop string resource end -->
